# advanced1

./: .env.example  README.md  added_text.txt  docker-compose.yml  load_data.py  main.py  pyproject.toml  requirements.txt
app/: __init__.py  views.py
app/templates/: base.html  book-detail.html  books-rent.html  books-return.html  header.html  index.html  rating.html  signin.html  signup.html
